Add proper background opacity filter for IE8

--- a/demo/folding.html
+++ b/demo/folding.html
@@ -30,7 +30,7 @@ window.onload = function() {
   var te = document.getElementById("code");
   var sc = document.getElementById("script");
   te.value = (sc.textContent || sc.innerText || sc.innerHTML).replace(/^\s*/, "");
-  sc.innerHTML = "";
+  //sc.innerHTML = "";
   var te_html = document.getElementById("code-html");
   te_html.value = "<html>\n  " + document.documentElement.innerHTML + "\n</html>";
 
